2002-07-25  Sam Steingold  <sds@gnu.org>

	* version.h: 2.29 is released

2002-07-25  Sam Steingold  <sds@gnu.org>
            Bruno Haible <bruno@clisp.org>

	fixed the (compile nil (lambda () ... #'(lambda ...))) bug
	* compiler.lisp (symbol-suffix): also work when funname is NIL,
	but suffix is not a symbol (see also the 2002-02-11 patch)

2002-07-22  Sam Steingold  <sds@gnu.org>

	* check-lispfun.lisp: new file: check LISPFUN, LISPFUNN and
	LISPSPECFORM between *.d and subr.d/subrkw.d/fsubr.d
	* makemake.in (check-sources): new target
	* array.d, charstrg.d, dirkey.d, io.d, posixmisc.d, rexx.d:
	* sequence.d, subr.d: removed backslashes from LISPFUNs

2002-07-22  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 584866 ]: inspect.lisp invalid XHTML & e-mail
	* inspect.lisp (*user-mail-address*): new user variable
	(with-html-output): use it; link/rev should be a string,
	not a symbol, like all the other attribute values;
	added a comment about overriding keep-alive

2002-07-21  Bruno Haible  <bruno@clisp.org>

	* stdint.h.in: Add support for FreeBSD.

2002-07-21  Bruno Haible  <bruno@clisp.org>

	Avoid using floating-point hardware where it leads to exceptions or
	wrong computations.
	* floatparam.c: New file.
	* m4/fenv_default.m4: New file.
	* configure.in: Create floatparam.h.
	Call CL_{FLOAT,DOUBLE}_{DIV0,OVERFLOW,UNDERFLOW,INEXACT}.
	* unixconf.h.in (FLOAT_DIV0_EXCEPTION, FLOAT_OVERFLOW_EXCEPTION)
	(FLOAT_UNDERFLOW_EXCEPTION, FLOAT_INEXACT_EXCEPTION)
	(DOUBLE_DIV0_EXCEPTION, DOUBLE_OVERFLOW_EXCEPTION)
	(DOUBLE_UNDERFLOW_EXCEPTION, DOUBLE_INEXACT_EXCEPTION): New macros.
	* lispbibl.d: Include floatparam.h.
	(FAST_FLOAT, FAST_DOUBLE): Define according to the
	autoconf-determined parameters.
	* ffloat.d (FF_FF_durch_FF): Choose slow path if FLOAT_DIV0_EXCEPTION.
	* dfloat.d (DF_DF_durch_DF): Choose slow path if DOUBLE_DIV0_EXCEPTION.
	* lisparit.d (init_arith): Remove wrong value of DOUBLE-FLOAT-EPSILON
	and DOUBLE-FLOAT-NEGATIVE-EPSILON on Linux/i386.