@@ -80,7 +80,10 @@ User visible changes
                  :INPUT-ERROR-ACTION :IGNORE).
 
 * Wide-mode -W backward compatibility option is now gone
-  (defunct since 1998-09-09).
+  (defunct since 1998-09-09).  This permits colons in memory image file
+  names (necessary on Cygwin).
+
+* Readline is now used properly on Cygwin.
 
 Portability
 -----------
