@@ -10055,8 +10055,15 @@ local object make_terminal_stream_ (void) {
      #else # ttyname() is rather slow, fstat() is faster.
       struct stat stdin_stat;
       struct stat stdout_stat;
-      if ((fstat(stdin_handle,&stdin_stat) >= 0) && (fstat(stdout_handle,&stdout_stat) >= 0))
-        if ((stdin_stat.st_dev == stdout_stat.st_dev) && (stdin_stat.st_ino == stdout_stat.st_ino))
+      if ((fstat(stdin_handle,&stdin_stat) >= 0)
+          && (fstat(stdout_handle,&stdout_stat) >= 0))
+        if ((stdin_stat.st_dev == stdout_stat.st_dev)
+           #ifndef UNIX_CYGWIN32
+            /* st_ino does not make sense on Cygwin: they are based on
+               filenames, and stdin is CONIN$ while stdout is CONOUT$ */
+            && (stdin_stat.st_ino == stdout_stat.st_ino)
+           #endif
+            )
           same_tty = true;
      #endif
     #endif
