@@ -1,3 +1,9 @@
+2002-07-26  Sam Steingold  <sds@gnu.org>
+
+	Readline is now used properly on Cygwin
+	* stream.d (make_terminal_stream_) [UNIX_CYGWIN32]: inode numbers
+	do not make sense on Cygwin: they are based on filenames
+
 2002-07-25  Sam Steingold  <sds@gnu.org>
 
 	* version.h: 2.29 is released
